  - Async services never called through Quartz Scheduler (only scheduled)
  - ServiceCallAsync.callWaiter() replaced by callFuture()
  - Removed ServiceCallAsync.resultReceiver()
  - Removed ServiceResultReceiver interface - use callFuture() instead
  - Removed ServiceResultWaiter class - use callFuture() instead
  - See related new features below
- Deprecated methods
  - These methods were deprecated (usually by methods with shorter names)
    long ago and with other API changes now removing them
  - Removed getLocalizedMessage() and formatValue() from L10nFacade
  - Removed runScriptInCurrentContext(), evaluateCondition(),
    evaluateContextField(), and evaluateStringExpand() from ResourceFacade

New Features

- Caching
  - CacheFacade now supports separate local and distributed caches both
    using the javax.cache interfaces
  - Added new MCache class for faster local-only caches
    - implements the javax.cache.Cache interface
    - supports expire by create, access, update
    - supports custom expire on get
    - supports max entries, eviction done in separate thread
  - For distributed caches now using Hazelcast, initially version 3.6.2
  - Hazelcast can be used for distributed entity cache and can be used for
    web session replication, distributed execution, and OrientDB clustering
  - Set many entities to cache=never to avoid overhead of caching where
    read/write ratio doesn't justify it or where cache could cause issues
- Async Services
  - ServiceCallAsync now using standard java.util.concurrent interfaces
  - Use callFuture() to get a Future object instead of callWaiter()
  - Can now get Runnable or Callable objects to run a service through a
    ExecutorService of your choice
  - Services can now be called local or distributed through Hazelcast
    - Added ServiceCallAsync.distribute() method
    - Added distribute option to XML Actions service-call.@async attribute
  - Distributed services allow offloading service execution to worker nodes