@@ -14,18 +14,10 @@ along with this software (see the LICENSE.md file). If not, see
 -->
 <entities xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://moqui.org/xsd/entity-definition-1.6.xsd">
 
-    <!-- NOTE: there is no ScheduledService or ScheduledServiceData entity any more because Quartz Scheduler will be
-        used and it has its own data model, etc -->
-
     <!-- ========================================================= -->
     <!-- moqui.service.semaphore -->
     <!-- ========================================================= -->
 
-    <entity entity-name="ServiceSemaphore" package-name="moqui.service.semaphore" cache="never">
-        <field name="serviceName" type="text-medium" is-pk="true"/>
-        <field name="lockThread" type="text-medium"/>
-        <field name="lockTime" type="date-time"/>
-    </entity>
     <entity entity-name="ServiceParameterSemaphore" package-name="moqui.service.semaphore" cache="never">
         <field name="serviceName" type="text-medium" is-pk="true"/>
         <field name="parameterValue" type="text-medium" is-pk="true"/>
